Fix site! (I think)

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <div class='header'>
   <div class="container">
     <div class="logo">
-      <a href="www.intermezzio.github.io"><img alt="Logo" src="/www.intermezzio.github.io/intermezzio_logo.png" /></a>
+      <a href="www.intermezzio.github.io/"><img alt="Logo" src="/www.intermezzio.github.io/intermezzio_logo.png" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="www.intermezzio.github.io"><img alt="Logo" src="/www.intermezzio.github.io/intermezzio_logo.png" /></a>
+      <a href="www.intermezzio.github.io/"><img alt="Logo" src="/www.intermezzio.github.io/intermezzio_logo.png" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
