--- a/404.html
+++ b/404.html
@@ -121,7 +121,7 @@
        <p class="text-center" id="title">
        	This Page Cannot Be Found
        	<br />
-       	<a href="/47">Go Home</a>
+       	<a href="/">Go Home</a>
        </p>
       </div>
     </main>
