--- a/experience/mit-teaching-assistant/index.html
+++ b/experience/mit-teaching-assistant/index.html
@@ -170,9 +170,17 @@
 <h3 id="skills">Skills</h3>
 
 <ul>
+<li>Python
+
+<ul>
+<li>Flask</li>
+<li>OpenCV, Pillow (Python Imaging Library)</li>
+</ul></li>
+<li>Git</li>
+<li>SSH</li>
 <li>HTML/CSS</li>
-<li>JS</li>
-<li>chart.js library</li>
+<li>Hugo</li>
+<li>Teaching</li>
 </ul>
 
 <h3 id="documentation">Documentation</h3>
