--- a/experience/index.html
+++ b/experience/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.2057ba6f975aa476a912e6cd95edebbc83773873f28dce5c7411777bb3bc6a48.css">
+  <link rel="stylesheet" href="/css/style.min.ea244b18b51ff1dbee5cd748dca1b393b20e2e9896d4c097770d51d1dc2eb037.css">
   
 
   
@@ -182,7 +182,7 @@
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/mit-teaching-assistant/">MIT Teaching Assistant</a></h2>
-  <p>Before my first year of college, I worked for MIT&#39;s School of Engineering as a TA for the Beaver Works Summer Institute. With a team of …</p>
+  <p>Before my first year of college, I worked for MIT’s School of Engineering as a TA for the Beaver Works Summer Institute. With a team of …</p>
 </div>
 
 
@@ -196,7 +196,7 @@
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/lip-reader/">Lip Reader</a></h2>
-  <p>At PennApps, UPenn&#39;s largest college hackathon, I worked with a team to build a lip reader. This lip reader used machine learning in Python …</p>
+  <p>At PennApps, UPenn’s largest college hackathon, I worked with a team to build a lip reader. This lip reader used machine learning in Python …</p>
 </div>
 
 
@@ -225,7 +225,7 @@ Many people want to find mentors in the same technical field as themselves. This
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/divestment/">Divestment</a></h2>
-  <p>At YHack, Yale&#39;s hackathon, my team created an application that calculates a budget for people who want to become millionaires when they …</p>
+  <p>At YHack, Yale’s hackathon, my team created an application that calculates a budget for people who want to become millionaires when they …</p>
 </div>
 
 
