--- a/experience/lip-reader/index.html
+++ b/experience/lip-reader/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.2057ba6f975aa476a912e6cd95edebbc83773873f28dce5c7411777bb3bc6a48.css">
+  <link rel="stylesheet" href="/css/style.min.ea244b18b51ff1dbee5cd748dca1b393b20e2e9896d4c097770d51d1dc2eb037.css">
   
 
   
@@ -171,7 +171,7 @@
           
 <h1 class="title">Lip Reader</h1>
 <div class="content">
-  <p>At PennApps, UPenn's largest college hackathon, I worked with a team to build a lip reader. This lip reader used machine learning in Python via a series of Google Cloud APIs to transcribe words seen in a computer's webcam. In addition, the program also can learn a user's voice by listening to about 10 seconds of audio. Then, it performs text-to-speech with that user's voice. On my team, I focused on the frontend design and structure. The deployment of this site can be found at <a href="https://speakinto.space">https://speakinto.space</a>.</p>
+  <p>At PennApps, UPenn&rsquo;s largest college hackathon, I worked with a team to build a lip reader. This lip reader used machine learning in Python via a series of Google Cloud APIs to transcribe words seen in a computer&rsquo;s webcam. In addition, the program also can learn a user&rsquo;s voice by listening to about 10 seconds of audio. Then, it performs text-to-speech with that user&rsquo;s voice. On my team, I focused on the frontend design and structure. The deployment of this site can be found at <a href="https://speakinto.space">https://speakinto.space</a>.</p>
 <h3 id="skills">Skills</h3>
 <ul>
 <li>HTML/CSS</li>
