--- a/experience/autonomous-drone/index.html
+++ b/experience/autonomous-drone/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.2057ba6f975aa476a912e6cd95edebbc83773873f28dce5c7411777bb3bc6a48.css">
+  <link rel="stylesheet" href="/css/style.min.ea244b18b51ff1dbee5cd748dca1b393b20e2e9896d4c097770d51d1dc2eb037.css">
   
 
   
@@ -171,7 +171,7 @@
           
 <h1 class="title">Autonomous Drone</h1>
 <div class="content">
-  <p>Before my senior year of high school, I enrolled in the MIT Beaver Works Summer Institute, where I worked with a team of students from across the country to programmed a drone to fly autonomously. More specifically, I worked with Intel's Ready to Fly research drones using ROS to program open loop and closed loop autonomous control.</p>
+  <p>Before my senior year of high school, I enrolled in the MIT Beaver Works Summer Institute, where I worked with a team of students from across the country to programmed a drone to fly autonomously. More specifically, I worked with Intel&rsquo;s Ready to Fly research drones using ROS to program open loop and closed loop autonomous control.</p>
 <h3 id="skills">Skills</h3>
 <ul>
 <li>Python
