--- a/experience/divestment/index.html
+++ b/experience/divestment/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.2057ba6f975aa476a912e6cd95edebbc83773873f28dce5c7411777bb3bc6a48.css">
+  <link rel="stylesheet" href="/css/style.min.ea244b18b51ff1dbee5cd748dca1b393b20e2e9896d4c097770d51d1dc2eb037.css">
   
 
   
@@ -171,7 +171,7 @@
           
 <h1 class="title">Divestment</h1>
 <div class="content">
-  <p>At YHack, Yale's hackathon, my team created an application that calculates a budget for people who want to become millionaires when they turn 40 years old. Many people try to invest to make money, but they don't realize that the companies they invest in have unsustainable practices that are bad for the environment. This program creates a budget plan that solves this problem by recommending sustainable stocks to make sure that your money is invested in good companies.</p>
+  <p>At YHack, Yale&rsquo;s hackathon, my team created an application that calculates a budget for people who want to become millionaires when they turn 40 years old. Many people try to invest to make money, but they don&rsquo;t realize that the companies they invest in have unsustainable practices that are bad for the environment. This program creates a budget plan that solves this problem by recommending sustainable stocks to make sure that your money is invested in good companies.</p>
 <p>The budget uses APIs to calculate taxes and other expenses. Additionally, the program web scrapes for sustainable stocks to invest in and includes these in the budget.</p>
 <h3 id="skills">Skills</h3>
 <ul>
