--- a/experience/mit-teaching-assistant/index.html
+++ b/experience/mit-teaching-assistant/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.2057ba6f975aa476a912e6cd95edebbc83773873f28dce5c7411777bb3bc6a48.css">
+  <link rel="stylesheet" href="/css/style.min.ea244b18b51ff1dbee5cd748dca1b393b20e2e9896d4c097770d51d1dc2eb037.css">
   
 
   
@@ -171,7 +171,7 @@
           
 <h1 class="title">MIT Teaching Assistant</h1>
 <div class="content">
-  <p>Before my first year of college, I worked for MIT's School of Engineering as a TA for the Beaver Works Summer Institute. With a team of program faculty members, I created course content for the Remote Sensing for Crisis Response program, as it was the first year the course was offered. I worked with Raspberry Pis on kites to take aerial images, and used Flask to present the images on a website. In addition, I built a couple of websites as documentation for the course.</p>
+  <p>Before my first year of college, I worked for MIT&rsquo;s School of Engineering as a TA for the Beaver Works Summer Institute. With a team of program faculty members, I created course content for the Remote Sensing for Crisis Response program, as it was the first year the course was offered. I worked with Raspberry Pis on kites to take aerial images, and used Flask to present the images on a website. In addition, I built a couple of websites as documentation for the course.</p>
 <h3 id="skills">Skills</h3>
 <ul>
 <li>Python
