--- a/experience/index.html
+++ b/experience/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.ea244b18b51ff1dbee5cd748dca1b393b20e2e9896d4c097770d51d1dc2eb037.css">
+  <link rel="stylesheet" href="/css/style.min.aad43d4ecb69a264f2539b89d7f779d5f3cdff22e7585fe5fc3c77272f1c2696.css">
   
 
   
@@ -182,28 +182,30 @@
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/mit-teaching-assistant/">MIT Teaching Assistant</a></h2>
-  <p>Before my first year of college, I worked for MIT’s School of Engineering as a TA for the Beaver Works Summer Institute. With a team of …</p>
+  <p>Before my first year of college, I worked for MIT&rsquo;s School of Engineering as a TA for the Beaver Works Summer Institute. With a team of program faculty members, I created course content for the Remote Sensing for Crisis Response program, as it was the first year the course was offered. I worked with Raspberry Pis on kites to take aerial images, and used Flask to present the images on a website.</p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/icims/">iCims</a></h2>
-  <p>During my first semester as a senior in high school, I worked at iCims through a mentorship program. iCims is a talent acqusition company …</p>
+  <p>During my first semester as a senior in high school, I worked at iCims through a mentorship program. iCims is a talent acqusition company that optimizes the corporate hiring process. I worked alongside other software developers and made significant progress on a localization project through my time at the company.
+Skills  Java Python RegEx Localization  Presentation Final Presentation</p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/lip-reader/">Lip Reader</a></h2>
-  <p>At PennApps, UPenn’s largest college hackathon, I worked with a team to build a lip reader. This lip reader used machine learning in Python …</p>
+  <p>At PennApps, UPenn&rsquo;s largest college hackathon, I worked with a team to build a lip reader. This lip reader used machine learning in Python via a series of Google Cloud APIs to transcribe words seen in a computer&rsquo;s webcam. In addition, the program also can learn a user&rsquo;s voice by listening to about 10 seconds of audio. Then, it performs text-to-speech with that user&rsquo;s voice. On my team, I focused on the frontend design and structure.</p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/autonomous-drone/">Autonomous Drone</a></h2>
-  <p>Before my senior year of high school, I enrolled in the MIT Beaver Works Summer Institute, where I worked with a team of students from …</p>
+  <p>Before my senior year of high school, I enrolled in the MIT Beaver Works Summer Institute, where I worked with a team of students from across the country to programmed a drone to fly autonomously. More specifically, I worked with Intel&rsquo;s Ready to Fly research drones using ROS to program open loop and closed loop autonomous control.
+Skills  Python  Robot Operating System (ROS)   Ubuntu  Bash    Source Code https://github.</p>
 </div>
 
 
@@ -211,42 +213,47 @@
   
   <h2 class="title-summary"><a href="/experience/mentorsintech/">Mentors In Tech</a></h2>
   <p>This project was created at HackPrinceton.
-Many people want to find mentors in the same technical field as themselves. This platform allows …</p>
+Many people want to find mentors in the same technical field as themselves. This platform allows people to create accounts and find mentors on the site that are most similar to them. Additionally, the site allows people to become mentors, and they are notified when someone requests to be mentored by them.
+Skills  Python  Flask (with user sessions)   MongoDB  MongoDB Atlas (Cloud hosting)   JQuery  Requests to and from Python   Bootstrap  Interactive frontend design    Awards  Best domain name (MLH, domain.</p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/chemistry-labs/">Chemistry Labs</a></h2>
-  <p>In my junior year of high school, I wrote a series of websites from scratch that calculated data from chemistry labs. My analyses included …</p>
+  <p>In my junior year of high school, I wrote a series of websites from scratch that calculated data from chemistry labs. My analyses included algebraic data analysis as well as visual data. The homepage for this series of websites is https://intermezzio.github.io/ChemistryLabs.
+Skills  HTML/CSS JS  chart.js    Visualization </p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/divestment/">Divestment</a></h2>
-  <p>At YHack, Yale’s hackathon, my team created an application that calculates a budget for people who want to become millionaires when they …</p>
+  <p>At YHack, Yale&rsquo;s hackathon, my team created an application that calculates a budget for people who want to become millionaires when they turn 40 years old. Many people try to invest to make money, but they don&rsquo;t realize that the companies they invest in have unsustainable practices that are bad for the environment. This program creates a budget plan that solves this problem by recommending sustainable stocks to make sure that your money is invested in good companies.</p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/tutoring/">Tutoring</a></h2>
-  <p>Throughout high school, I tutored students in various subjects. Some of my tutoring was paid through the Creative Learning Zone company …</p>
+  <p>Throughout high school, I tutored students in various subjects. Some of my tutoring was paid through the Creative Learning Zone company while other tutoring was volunteering through my school.
+Subjects  Math  Geometry Algebra II Precalculus   C++ Java Physics Spanish English Chess  </p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/calc-site/">Calculus Website</a></h2>
-  <p>Along with two other students, I created an interactive website that teaches calculus. The website features detailed lessons with randomly …</p>
+  <p>Along with two other students, I created an interactive website that teaches calculus. The website features detailed lessons with randomly generated practice problems and interactive graphs. The complete site can be found at https://intermezzio.github.io/Intermezzio_Derive/
+Skills  HTML/CSS  materialize.css   JS  MathJax    Visualization </p>
 </div>
 
 
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="/experience/about/">About Me</a></h2>
-  <p>My name is Andrew Mascillaro, and I am an engineering student at Olin College of Engineering. Most of my engineering experience is …</p>
+  <p>My name is Andrew Mascillaro, and I am an engineering student at Olin College of Engineering. Most of my engineering experience is software-based, although I have experinces in multiple engineering fields. Some of my personal hobbies and extracurriculars include chess and speed memorization.
+Contact  LinkedIn Chess.com Lichess.org  Message Me </p>
 </div>
 
 
@@ -278,7 +285,7 @@ Many people want to find mentors in the same technical field as themselves. This
   
 
   
-  <script type="text/javascript" src="/js/scripts.min.bf1e1f7ae8e03db5f012356e825843facdff51c0a559cb0d27fe2bbe1db405c2.js"></script>
+  <script type="text/javascript" src="/js/scripts.min.1237ff71925bb8625c97a9af8db4c54525258bedfd7c47493daaff723bea755e.js"></script>
   
 
   
