Update student year on front page

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <h1 class="title">Welcome</h1>
         <div class="content">
           
-          <p>My name is Andrew Mascillaro
-<!-- raw HTML omitted -->I am a first-year engineering student at <a href="https://www.olin.edu">Olin College of Engineering</a></p>
+          <p>My name is Andrew Mascillaro, and I am an engineering student at<br>
+<a href="https://www.olin.edu">Olin College of Engineering</a></p>
 
           
         </div>
